--- a/src/i18n/resources/en.json
+++ b/src/i18n/resources/en.json
@@ -360,6 +360,8 @@
     "callTime": "Call duration",
     "handleByOtherDevice": "Handled on another device",
     "screenshotHideWindow": "Hide current window screenshot",
+    "screenshotHide": "Hide window screenshot",
+    "screenshotNoHide": "Screenshot without hiding window",
     "historyList": "History",
     "memberList": "Group member list",
     "meetingInvitation": "Call invitation",
