--- a/src/i18n/resources/zh.json
+++ b/src/i18n/resources/zh.json
@@ -183,8 +183,8 @@
     "verifyValidity": "的 6 位验证码，有效期 10 分钟",
     "sendVerifyCode": "发送验证码",
     "qrCodeLogin": "扫码登录",
-    "qrCodeLoginTitle": "请使用ShuCheng移动端扫描二维码",
-    "welcome": "欢迎使用ShuCheng通讯工具",
+    "qrCodeLoginTitle": "请使用移动端扫描二维码",
+    "welcome": "欢迎使用即时通讯工具",
     "title": "在线化办公",
     "subTitle": "多人协作，打造高效办公方式",
     "myCreated": "我创建的",
